@@ -11,6 +11,7 @@ Revision history for {{$dist->name}}
     - RPC on start handle existing pending messages in stream, if not expired.
     - RPC overflow protection (will not connsume more than it can process).
     - Transport Redis connection pool count and wait time can be controlled through config parameters.
+    - Add orderedset data structure to Myriad storage.
 
     [Bugs fixed]
     - Subscriptions to create streams from source without a published event.
